welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var track=false
  var color=Color.lightGray
  
  while(!track){
    
    color=getCouleurSol()
  	avance()
		if (color=Color.green){
    	recule()
    	baisseBrosse()
    	avance()
    	leveBrosse()
      if (estSurBiscuit){
        track=true
      }
    
  	} else {
    	test()
  	}
  }


return true
}



def test() {
  
}